# LearningSoftRasterization

./: CMakeLists.txt  README.md  geometry.h  main.cpp  model.h
